src/objects/WES_Fuel_Card_Pack__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Embossed_Line__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Embossed Line</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Esso</fullName>
                </value>
                <value>
                    <fullName>EDC</fullName>
                </value>
                <value>
                    <fullName>UK Fuels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CardsWithDiffVelProfiles__c</fullName>
        <inlineHelpText>Number of Fuel Cards in Pack with different velocity profiles than the default or overide on the application.</inlineHelpText>
        <label># of Cards with different Vel Profiles</label>
        <summaryFilterItems>
            <field>WES_Fuel_Card__c.VelocityProfileDifferent__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>WES_Fuel_Card__c.WESFuelCardPack__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cards_in_Pack_Completed__c</fullName>
        <label>Cards in Pack Completed</label>
        <summaryFilterItems>
            <field>WES_Fuel_Card__c.Fuel_Card_Complete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>WES_Fuel_Card__c.WESFuelCardPack__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EDCCardType__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gets marked as true by workflow rule if Card Type contains EDC. Used for roll-up summary on Application.</description>
        <label>EDC Card Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDCCards__c</fullName>
        <label># of EDC Cards</label>
        <summaryFilterItems>
            <field>WES_Fuel_Card__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>EDC</value>
        </summaryFilterItems>
        <summaryForeignKey>WES_Fuel_Card__c.WESFuelCardPack__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EssoCardType__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gets marked as true by workflow rule if Card Type contains Esso. Used for roll-up summary on Application.</description>
        <label>Esso Card Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EssoCards__c</fullName>
        <label># of Esso Cards</label>
        <summaryFilterItems>
            <field>WES_Fuel_Card__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Esso</value>
        </summaryFilterItems>
        <summaryForeignKey>WES_Fuel_Card__c.WESFuelCardPack__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fuel_Cards_Needed__c</fullName>
        <formula>IF(INCLUDES(Card_Type__c ,&quot;EDC&quot;),1,0) + 
IF(INCLUDES(Card_Type__c ,&quot;Esso&quot;),1,0) +
IF(INCLUDES(Card_Type__c ,&quot;UK Fuels&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fuel Cards Needed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fuel_Cards_in_Pack__c</fullName>
        <label>Fuel Cards in Pack</label>
        <summaryForeignKey>WES_Fuel_Card__c.WESFuelCardPack__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UKFuelsCardType__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gets marked as true by workflow rule if Card Type contains UK Fuels. Used for roll-up summary on Application.</description>
        <label>UK Fuels Card Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UKFuelsCards__c</fullName>
        <label># of UK Fuels Cards</label>
        <summaryFilterItems>
            <field>WES_Fuel_Card__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>UK Fuels</value>
        </summaryFilterItems>
        <summaryForeignKey>WES_Fuel_Card__c.WESFuelCardPack__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>VRN_Driver__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>VRN / Driver</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WES_Application_Request__c</fullName>
        <label>WES Application Request</label>
        <referenceTo>WES_Application_Request__c</referenceTo>
        <relationshipLabel>WES Fuel Card Packs</relationshipLabel>
        <relationshipName>WES_Fuel_Card_Packs1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>WES Fuel Card Pack</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Card_Type__c</columns>
        <columns>VRN_Driver__c</columns>
        <columns>Additional_Embossed_Line__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WES-FCP-{000000}</displayFormat>
        <label>WES Fuel Card Pack #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WES Fuel Card Packs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>